--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="config.js"></script>
   <script src="Github.js"></script>
   <script src="UI.js"></script>
   <script src="script.js"></script>
