--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         </div>
       </div>
-      <div class="d-flex justify-content-end flex-wrap gap-5 mt-3" id="paginationtools">
+      <div class="d-flex justify-content-end flex-wrap gap-5 mt-3">
         <div class="form-group ">
           <select class="form-control " id="sortby" title="Sort By">
             <option value="name">Name</option>
@@ -66,7 +66,7 @@
           </select>
         </div>
         <nav aria-label="page navigation justify-content-start ">
-          <ul class="pagination justify-content-center">
+          <ul class="pagination justify-content-center" id="paginationtools">
             <li class="page-item">
               <a class="page-link " id="page-item-no-prev" href="#" aria-label="Previous">
                 <span aria-hidden="true">&laquo;</span>
